--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -23,6 +23,31 @@
             </h2>
         </ion-item>
 
+        <ion-item class="" (click)="contact()">
+            <h2>
+                <ion-icon name="ios-mail" class="mr-auto text-thime"></ion-icon> <span class="text-ellipsis">Contact us</span>
+                <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+            </h2>
+        </ion-item>
+        <ion-item class="" (click)="privacy()">
+            <h2>
+                <ion-icon name="md-lock" class="mr-auto text-thime"></ion-icon> <span class="text-ellipsis">Privacy Policy</span>
+                <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+            </h2>
+        </ion-item>
+        <ion-item class="" (click)="about()">
+            <h2>
+                <ion-icon class="mr-auto text-thime"> <img src="assets/imgs/about-icon.png"></ion-icon> <span class="text-ellipsis">About us</span>
+                <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+            </h2>
+        </ion-item>
+        <ion-item class="" (click)="faqs()">
+            <h2>
+                <ion-icon class="mr-auto text-thime"> <img src="assets/imgs/faqs-icon.png"></ion-icon> <span class="text-ellipsis">FAQs & Terms</span>
+                <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+            </h2>
+        </ion-item>
+
     </ion-list>
     <ion-list no-lines (click)="signin()">
         <ion-item class="sign-out">
