--- a/src/pages/startpage/start.html
+++ b/src/pages/startpage/start.html
@@ -10,12 +10,12 @@
 
         <ion-segment style="margin-top: 30px !important;" [(ngModel)]="type">
                 <ion-segment-button value="worker" style="height: 100% !important;" [class.active]=" type === 'worker' " [class.inactive]=" type === 'customer' " >
-                    <img src="../../assets/imgs/serviceprovider.png" alt="" style="height: 127px !important; padding-top: 7px;">
+                    <img src="assets/imgs/serviceprovider.png" alt="" style="height: 127px !important; padding-top: 7px;">
                     <br>
                     Login as Service Provider
                 </ion-segment-button>
                 <ion-segment-button class="active" value="customer" style="height: 100% !important; padding-top: 2px;" [class.active]=" type === 'customer' " [class.inactive]=" type === 'worker' ">
-                    <img src="../../assets/imgs/serviceseeker1.png" alt="">
+                    <img src="assets/imgs/serviceseeker1.png" alt="">
                     <br>
                     Login as Service Seeker
                 </ion-segment-button>
@@ -37,10 +37,10 @@
                                             </ion-item>
                                         </ion-list>
                                         <p style="text-align: right"><a (click)="forgotPassword()" >Forgot Password?</a></p>
-                                        <button class="btn" type="submit" ion-button round full margin-top margin-bottom [disabled]="form.pristine || form.invalid" >Continue</button>
+                                        <button class="btn" type="submit" ion-button round full margin-top margin-bottom [disabled]="form1.pristine || form1.invalid" >Continue</button>
                                     </form>
                     </div>
-                    <p style="padding-left: 10px" class="text-grey">Don't have an account? Signup <a (click)="signup" >Here.</a></p>
+                    <p style="padding-left: 10px" class="text-grey">Don't have an account? Signup <a (click)="signup()" >Here.</a></p>
                     <p style="text-align: center" class="text-grey">OR</p>
                     <p style="padding-left: 10px" class="text-grey">Login with Facebook <a (click)="facebookSignin()" >Here.</a></p>     
                 </ion-list>
@@ -59,7 +59,7 @@
                                 </ion-item>
                             </ion-list>
                             <p style="text-align: right"><a (click)="forgotPassword()" >Forgot Password?</a></p>
-                            <button class="btn" type="submit" ion-button round full margin-top margin-bottom [disabled]="form1.pristine || form1.invalid" >Continue</button>
+                            <button class="btn" type="submit" ion-button round full margin-top margin-bottom [disabled]="form.pristine || form.invalid" >Continue</button>
                             </form>
                         </div>
                         <p style="padding-left: 10px" class="text-grey">Don't have an account? Signup <a (click)="signup()" >Here.</a></p>
