--- a/src/pages/listofplumber/listofplumber.html
+++ b/src/pages/listofplumber/listofplumber.html
@@ -26,7 +26,7 @@
                 <span class="text-ellipsis">
                     <img src="assets/imgs/ruppes-icon.png"> {{item.rate}} / per hover
                 </span>
-                <!-- <span class="ml-auto text-ellipsis">2.0 km away</span></p> -->
+                <span class="ml-auto text-ellipsis">{{item.distance}} km away</span></p>
         </ion-item>
     </div>
     </ion-list>
