--- a/src/pages/plumberprofile/plumberprofile.html
+++ b/src/pages/plumberprofile/plumberprofile.html
@@ -20,8 +20,8 @@
                     <p text-center>per hover</p>
                 </ion-col>
                 <ion-col col-6>
-                    <!-- <h3 text-center> 2.3 km</h3>
-                    <p text-center>away from you</p> -->
+                    <h3 text-center> {{distance}} km</h3>
+                    <p text-center>away from you</p>
                 </ion-col>
             </ion-row>
             <ion-row class="btn-box">
