--- a/src/pages/provider/account/account.html
+++ b/src/pages/provider/account/account.html
@@ -19,7 +19,7 @@
                 <ion-label>Online Status</ion-label>
                 <ion-toggle [(ngModel)]="status" (ionChange)="onChange()" checked="false"></ion-toggle>
         </ion-item>
-<!-- 
+
         <ion-item class="" (click)="packages()">
             <h2>
                 <ion-icon name="ios-clipboard" class="mr-auto text-thime"></ion-icon> <span class="text-ellipsis">Your Plan</span>
@@ -49,7 +49,7 @@
                 <ion-icon class="mr-auto text-thime"> <img src="assets/imgs/faqs-icon.png"></ion-icon> <span class="text-ellipsis">FAQs & Terms</span>
                 <ion-icon name="ios-arrow-forward-outline"></ion-icon>
             </h2>
-        </ion-item> -->
+        </ion-item>
 
     </ion-list>
     <ion-list no-lines>
